[package]
name = "yk_dense_fsa"
version = "0.1.0"
authors = ["LPeter1997 <lenkefi.peti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yk_intervals = { path = "../yk_intervals" }
yk_regex_parse = { path = "../yk_regex_parse" }
