[package]
name = "yk_incremental_test"
version = "0.1.0"
authors = ["Peter Lenkefi <lenkefi.peti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yk_lexer = { path = "../yk_lexer" }
yk_parser = { path = "../yk_parser" }
