[package]
name = "yk_lexer"
version = "0.1.0"
authors = ["Peter Lenkefi <lenkefi.peti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yk_dense_fsa = { path = "../yk_dense_fsa" }
syn = { version = "1.0.5", features = ["full"] }
quote = "1.0.2"

[lib]
proc-macro = true
