[package]
name = "yk_parser"
version = "0.1.0"
authors = ["Peter Lenkefi <lenkefi.peti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.5", features = ["full"] }
yk_parser_derive = { path = "../yk_parser_derive" }
