[package]
name = "yk_parser_internal"
version = "0.1.0"
authors = ["Peter Lenkefi <lenkefi.peti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.5", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.4"
